--- a/RomRepoMgr/Views/About.xaml
+++ b/RomRepoMgr/Views/About.xaml
@@ -43,14 +43,9 @@
         <vm:AboutViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" /> <RowDefinition Height="*" /> <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+        <Grid RowDefinitions="Auto,*,Auto">
+            <Grid Grid.Row="0"
+                  ColumnDefinitions="Auto,*">
                 <Border Grid.Column="0"
                         BorderThickness="5">
                     <Image Source="/Assets/avalonia-logo.ico"
@@ -59,10 +54,8 @@
                 </Border>
                 <Grid Grid.Column="1"
                       HorizontalAlignment="Left"
-                      VerticalAlignment="Center">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
+                      VerticalAlignment="Center"
+                      RowDefinitions="Auto,Auto">
                     <TextBlock Grid.Row="0"
                                Text="{Binding SoftwareName}"
                                HorizontalAlignment="Left"
