--- a/RomRepoMgr/Views/EditDat.xaml
+++ b/RomRepoMgr/Views/EditDat.xaml
@@ -44,18 +44,9 @@
         <vm:EditDatViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+            <Grid Grid.Row="0"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -68,10 +59,8 @@
                          Text="{Binding Name}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="1"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -84,10 +73,8 @@
                          Text="{Binding Version}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="2"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -100,10 +87,8 @@
                          Text="{Binding Author}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="3">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="3"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -116,10 +101,8 @@
                          Text="{Binding Category}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="4">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="4"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -132,10 +115,8 @@
                          Text="{Binding Comment}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="5"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -148,10 +129,8 @@
                          Text="{Binding Date}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="6">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="6"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -164,10 +143,8 @@
                          Text="{Binding Description}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="7">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="7"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -180,10 +157,8 @@
                          Text="{Binding Homepage}"
                          Padding="5" />
             </Grid>
-            <Grid Grid.Row="8">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="8"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -196,10 +171,8 @@
                            Text="{Binding TotalMachines}"
                            Padding="5" />
             </Grid>
-            <Grid Grid.Row="9">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="9"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -212,10 +185,8 @@
                            Text="{Binding CompleteMachines}"
                            Padding="5" />
             </Grid>
-            <Grid Grid.Row="10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="10"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -228,10 +199,8 @@
                            Text="{Binding IncompleteMachines}"
                            Padding="5" />
             </Grid>
-            <Grid Grid.Row="11">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="11"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -244,10 +213,8 @@
                            Text="{Binding TotalRoms}"
                            Padding="5" />
             </Grid>
-            <Grid Grid.Row="12">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="12"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -260,10 +227,8 @@
                            Text="{Binding HaveRoms}"
                            Padding="5" />
             </Grid>
-            <Grid Grid.Row="13">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" /> <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Grid.Row="13"
+                  ColumnDefinitions="140,*">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
