--- a/RomRepoMgr/Views/ExportDat.xaml
+++ b/RomRepoMgr/Views/ExportDat.xaml
@@ -44,11 +44,7 @@
         <vm:ExportDatViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" /> <RowDefinition Height="auto" /> <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+        <Grid RowDefinitions="Auto,auto,Auto,Auto">
             <TextBlock Grid.Row="0"
                        Text="{Binding StatusMessage}"
                        HorizontalAlignment="Center" />
