--- a/RomRepoMgr/Views/RemoveDat.xaml
+++ b/RomRepoMgr/Views/RemoveDat.xaml
@@ -44,10 +44,7 @@
         <vm:RemoveDatViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" /> <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
+        <Grid RowDefinitions="Auto,auto">
             <TextBlock Grid.Row="0"
                        Text="{Binding StatusMessage}"
                        HorizontalAlignment="Center" />
