--- a/RomRepoMgr/Views/UpdateStats.xaml
+++ b/RomRepoMgr/Views/UpdateStats.xaml
@@ -42,11 +42,7 @@
         <vm:UpdateStatsViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" /> <RowDefinition Height="Auto" /> <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+        <Grid RowDefinitions="Auto,Auto,*,Auto">
             <TextBlock Grid.Row="0"
                        Text="{Binding StatusMessage}"
                        HorizontalAlignment="Center" />
